// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<label>
  <input
    checked={false}
    className="nxrm-checkbox"
    type="checkbox"
  />
</label>
`;

exports[`Checkbox renders correctly with all props 1`] = `
<label>
  <input
    checked={true}
    className="nxrm-checkbox"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;
